@@ -1,5 +1,7 @@
 *SVN*
 
+* Association collections have an _ids reader method to match the existing writer for collection_select convenience (e.g. employee.task_ids). The writer method skips blank ids so you can safely do @employee.task_ids = params[:tasks] without checking every time for an empty list or blank values.  #1887, #5780 [Michael Schuerig]
+
 * Add an attribute reader method for ActiveRecord::Base.observers [Rick Olson]
 
 * Deprecation: count class method should be called with an options hash rather than two args for conditions and joins.  #6287 [Bob Silva]
